--- a/Hibernate/src/main/webapp/WEB-INF/pages/userform.html
+++ b/Hibernate/src/main/webapp/WEB-INF/pages/userform.html
@@ -1,20 +1,24 @@
-<a href="viewusers.jsp">View All Records</a><br/>
+<a href="viewusers">View All Records</a><br/>
+<%@ taglib prefix="fmt" uri="http://java.sun.com/jsp/jstl/fmt" %>
 
-<h1>Add New User</h1>
+
+<%Calendar c= Calendar.getInstance();
+Date today = c.getTime();
+Date dateFromDb = yourDateFromDatabase;
+%>
+
+<h1>Add New User !</h1>
 <form >
 <table>
 <tr><td>Name:</td><td><input type="text" name="name"/></td></tr>
-<tr><td>Password:</td><td><input type="password" name="password"/></td></tr>
-<tr><td>Email:</td><td><input type="email" name="email"/></td></tr>
-<tr><td>Sex:</td><td><input type="radio" name="sex" value="male"/>Male <input type="radio" name="sex" value="female"/>Female </td></tr>
-<tr><td>Country:</td><td>
-<select name="country" style="width:155px">
-<option>India</option>
-<option>Pakistan</option>
-<option>Afghanistan</option>
-<option>Berma</option>
-<option>Other</option>
-</select>
+<tr><td>AGE:</td><td><input type="number" name="age"/></td></tr>
+<tr><td>Are you Admin?:</td><td><input type="radio" name="isAdmin" value=1/>Yes<input type="radio" name="isAdmin" value=0/>No</td></tr>
+<tr><input type="datetime-local" атрибуты></tr>
+<tr><input type="time" name="timestamp" step="1"></tr>
+    <tr><td>CREATED DATE:</td><td>
+<input type="date" name="date" value="dateFromDb" style="width:155px">
+
+</input>
 </td></tr>
 <tr><td colspan="2"><input type="submit" value="Add User"/></td></tr>
 </table>
